# nde_connect_chat

./: .gitignore  NDEConnect.jks  README.md  analysis_options.yaml  pubspec.yaml  temp_lines.txt
android/: settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  splachscreen.dart
lib/bridge_generated.dart/: api.dart  frb_generated.dart  frb_generated.web.dart
lib/data/: base_url.dart  mailboxid.dart  respiratory.dart  token.dart
lib/presantation/call/: call_api.dart  call_bloc.dart  call_event.dart  call_model.dart  call_screen.dart  call_state.dart
lib/presantation/contact/: contact_screen.dart
lib/presantation/home/: home_screen.dart
lib/presantation/login/: carousel_screen.dart  login_api.dart  login_model.dart  login_req.dart  login_screen.dart  login_screen_bloc.dart  login_screen_event.dart  login_screen_state.dart  loro_cleanup.dart  password_screen.dart
lib/presantation/network/: connectivity_servicer.dart  connectivity_watcher.dart
lib/rust/api.dart/: api.dart  (+2 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  bridge.podspec
rust/src/: api.rs  frb_generated.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+362 files in other folders)
