[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "bridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
flutter_rust_bridge_macros = "2.11.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

loro = "1.10.3"

once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.4"
